Add basic swagger spec
