# swagger_gen/models/constraint.go
@@ -1,0 +1,129 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Constraint constraint
+// swagger:model constraint
+
+type Constraint struct {
+
+	// id
+	// Read Only: true
+	ID int64 `json:"id,omitempty"`
+
+	// operator
+	// Required: true
+	// Min Length: 1
+	Operator *string `json:"operator"`
+
+	// property
+	// Required: true
+	// Min Length: 1
+	Property *string `json:"property"`
+
+	// value
+	// Required: true
+	// Min Length: 1
+	Value *string `json:"value"`
+}
+
+/* polymorph constraint id false */
+
+/* polymorph constraint operator false */
+
+/* polymorph constraint property false */
+
+/* polymorph constraint value false */
+
+// Validate validates this constraint
+func (m *Constraint) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateOperator(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateProperty(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateValue(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Constraint) validateOperator(formats strfmt.Registry) error {
+
+	if err := validate.Required("operator", "body", m.Operator); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("operator", "body", string(*m.Operator), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Constraint) validateProperty(formats strfmt.Registry) error {
+
+	if err := validate.Required("property", "body", m.Property); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("property", "body", string(*m.Property), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Constraint) validateValue(formats strfmt.Registry) error {
+
+	if err := validate.Required("value", "body", m.Value); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("value", "body", string(*m.Value), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Constraint) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Constraint) UnmarshalBinary(b []byte) error {
+	var res Constraint
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
