# swagger_gen/models/distribution.go
@@ -1,0 +1,179 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Distribution distribution
+// swagger:model distribution
+
+type Distribution struct {
+
+	// bitmap
+	// Required: true
+	// Min Length: 1
+	Bitmap *string `json:"bitmap"`
+
+	// id
+	// Read Only: true
+	ID int64 `json:"id,omitempty"`
+
+	// percent
+	// Required: true
+	// Maximum: 100
+	// Minimum: 0
+	Percent *int32 `json:"percent"`
+
+	// rank
+	// Required: true
+	// Minimum: 0
+	Rank *int32 `json:"rank"`
+
+	// variant ID
+	// Required: true
+	VariantID *int64 `json:"variantID"`
+
+	// variant key
+	// Required: true
+	// Min Length: 1
+	VariantKey *string `json:"variantKey"`
+}
+
+/* polymorph distribution bitmap false */
+
+/* polymorph distribution id false */
+
+/* polymorph distribution percent false */
+
+/* polymorph distribution rank false */
+
+/* polymorph distribution variantID false */
+
+/* polymorph distribution variantKey false */
+
+// Validate validates this distribution
+func (m *Distribution) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateBitmap(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validatePercent(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateRank(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateVariantID(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateVariantKey(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Distribution) validateBitmap(formats strfmt.Registry) error {
+
+	if err := validate.Required("bitmap", "body", m.Bitmap); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("bitmap", "body", string(*m.Bitmap), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Distribution) validatePercent(formats strfmt.Registry) error {
+
+	if err := validate.Required("percent", "body", m.Percent); err != nil {
+		return err
+	}
+
+	if err := validate.MinimumInt("percent", "body", int64(*m.Percent), 0, false); err != nil {
+		return err
+	}
+
+	if err := validate.MaximumInt("percent", "body", int64(*m.Percent), 100, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Distribution) validateRank(formats strfmt.Registry) error {
+
+	if err := validate.Required("rank", "body", m.Rank); err != nil {
+		return err
+	}
+
+	if err := validate.MinimumInt("rank", "body", int64(*m.Rank), 0, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Distribution) validateVariantID(formats strfmt.Registry) error {
+
+	if err := validate.Required("variantID", "body", m.VariantID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Distribution) validateVariantKey(formats strfmt.Registry) error {
+
+	if err := validate.Required("variantKey", "body", m.VariantKey); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("variantKey", "body", string(*m.VariantKey), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Distribution) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Distribution) UnmarshalBinary(b []byte) error {
+	var res Distribution
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
