# swagger_gen/models/segment_debug_log.go
@@ -1,0 +1,57 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// SegmentDebugLog segment debug log
+// swagger:model segmentDebugLog
+
+type SegmentDebugLog struct {
+
+	// msg
+	Msg string `json:"msg,omitempty"`
+
+	// segment ID
+	SegmentID int64 `json:"segmentID,omitempty"`
+}
+
+/* polymorph segmentDebugLog msg false */
+
+/* polymorph segmentDebugLog segmentID false */
+
+// Validate validates this segment debug log
+func (m *SegmentDebugLog) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SegmentDebugLog) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SegmentDebugLog) UnmarshalBinary(b []byte) error {
+	var res SegmentDebugLog
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
